web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        namespace: webapp
    spec:
      containers:
        - name: webapp
          image: registry.localhost:5000/nanajanashia/k8s-demo-app:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: webapp
  name: webapp-service
spec:
  selector:
    app: webapp
      #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
        #nodePort: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: webapp
  annotations:
    ingress.kubernetes.io/protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - webapp.local
      secretName: webapp
  rules:
    - host: webapp.local
      http:
        paths:
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name:  webapp-service
                port:
                  number: 3000
